# wait

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  entrypoint.sh  manage.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: docker-build-publish.yaml  pytest.yaml
static/: manifest.json  sw.js
static/css/: style.css
templates/: base.html
templates/registration/: login.html  signup.html
templates/tracker/: all_entries.html  edit_entry.html  index.html  settings.html
tracker/: api_urls.py  api_views.py  forms.py  models.py  serializers.py  urls.py  views.py
tracker/migrations/: 0001_initial.py  0002_alter_weightentry_user.py  0003_alter_weightentry_options_and_more.py  0004_weightentry_unit_alter_weightentry_weight.py  0005_usersettings.py  0006_auto_20260626_0612.py  0007_delete_duplicate_social_apps.py
tracker/tests/: test_api.py  test_views.py
wait/: asgi.py  settings.py  urls.py  wsgi.py
