[project]
name = "wait"
version = "1.5.0"
description = " weight tracking app "
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asgiref==3.8.1",
    "crispy-bootstrap5==2025.4",
    "Django==5.2",
    "django-crispy-forms==2.4",
    "packaging==25.0",
    "psycopg2-binary==2.9.10",
    "python-decouple==3.8",
    "setuptools==80.3.0",
    "sqlparse==0.5.3",
    "tzdata==2025.2",
    "wheel==0.45.1",
    "django-allauth==65.7.0",
    "requests==2.32.3",
    "PyJWT==2.10.1",
    "cryptography==44.0.3",
    "gunicorn",
    "whitenoise",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "ruff",
    "pytest",
    "pytest-django",
]
